# petres

./: .gitignore  LICENSE  Makefile  README.md  _config.yml  example_porosity.grdecl  pyproject.toml  readthedocs.yaml
.github/: FUNDING.yml  copilot-instructions.md
.github/prompts/: Enforce Type Hints and Generate NumPy Docstrings.prompt.md  Enhanced Type Hints and NumPy Docstrings.prompt.md  Generate NumPy Docstrings.prompt.md  Generate Type Hints.prompt.md
.github/workflows/: ci.yml  pypi.yml  testpypi.yml
assets/css/: style.scss
data/: README.md
data/opm/: LICENSE  README.md
docs/: .gitignore  Makefile  README.md  generate_example_docs copy.py  make.bat  poro_constant_per_zone.grdecl
docs/property_modeling/: constant_full_grid.py  constant_per_zone.py
docs/scripts/: generate_importing_grid_interactive.py
docs/source/: conf.py  examples.rst  index.rst  tutorials.rst
docs/source/_config/: examples.yml
docs/source/_ext/: __init__.py  apigen.py  exampledocs copy.py  exampledocs.py  furo_nav_sections.py
docs/source/_static/: .gitkeep  custom.css
docs/source/_templates/: base.html  layout.html  page.html
docs/source/api/: eclipse.rst  errors.rst  grids.rst  index.rst  interpolators.rst  models.rst  petres-eclipse-grdeclreader.rst  petres-eclipse-unitconverter.rst  petres-eclipse-wconhistrecord.rst  petres-eclipse-wconhiststep.rst  petres-eclipse-wconhistwriter.rst  petres-errors-existingpropertynameerror.rst  petres-errors-exporterror.rst  petres-errors-grdeclexporterror.rst  petres-errors-grdeclmissingvalueerror.rst  petres-errors-griderror.rst  petres-errors-horizonerror.rst  petres-errors-interpolationerror.rst  petres-errors-missingeclipsekeyworderror.rst  petres-errors-missingpropertyvalueerror.rst  petres-errors-propertyerror.rst  petres-errors-unsupportedgridattributeerror.rst  petres-errors-visualizationerror.rst  petres-errors-zoneerror.rst  petres-grids-cornerpointgrid.rst  petres-grids-gridproperty.rst  petres-grids-pillargrid.rst  petres-grids-rectilinear2dgrid.rst  petres-interpolators-inversedistanceweightinginterpolator.rst  petres-interpolators-ordinarykriginginterpolator.rst  petres-interpolators-radialbasisfunctioninterpolator.rst  petres-interpolators-universalkriginginterpolator.rst  petres-models-boundarypolygon.rst  petres-models-horizon.rst  petres-models-verticalwell.rst  petres-models-zone.rst  petres-viewers-matplotlib2dviewer.rst  petres-viewers-matplotlib2dviewertheme.rst  petres-viewers-pyvista3dviewer.rst  petres-viewers-pyvista3dviewertheme.rst  (+2 more)
docs/source/developer/: documentation.rst  setup.rst  testing.rst
docs/source/examples/: index.rst
docs/source/fundamentals/: corner-point-grids.rst  grid-classification.rst  grid-types-in-reservoir-simulation.rst  grid-types.rst  grid_classification copy 2.rst  grid_classification copy.rst  grid_classification.rst  grid_geometry.rst
docs/source/getting-started/: installation.rst  quickstart.rst
docs/source/getting_started/: installation.rst  quickstart.rst
docs/source/tutorials/: basic-grid-creation.rst  boundary-polygon.rst  exporting-grid.rst  getting-started.rst  grid-modeling-from-horizons-and-zones.rst  grid-visualization.rst  horizon-modeling copy.rst  horizon-modeling.rst  importing-grid.rst  index.rst  interpolators.rst  mapping-wells-to-grid-cells.rst  pillar-gridding.rst  property-modeling copy.rst  property-modeling.rst  rectilinear-and-regular-grids.rst  zone-modeling copy.rst  zone-modeling.rst
examples/: add_analytic_aquifer.py  advance_grid_visualization.py  apply_boundary_mask_on_cornerpoint_grid.py  create_cornerpoint_grid_from_zones.py  create_horizon.py  create_horizon_from_sample_points.py  create_horizon_from_wells.py  create_horizon_from_wells_2d.py  create_property_distribution.py  create_zone.py  create_zone_from_horizons.py  divide_zone_into_layers.py  edit_eclipse_grdecl.py  export_corner_point_grid_to_eclipse_grdecl_file.py  getting_started.py  property_constant_full_grid.py  read_eclipse_grdecl.py  run.py  verify_actnum.py  verify_continuous_zones.py  view_2d_advanced.py  view_boundary_2d.py  view_zone_2d.py  well_sampling.py
examples/data/corner_point/: EXPORT_TEST.GRDECL  SNARK.GRDECL
examples/grid/: apply_boundary_mask_on_cornerpoint_grid.py  create_boundary_polygon.py  create_cornerpoint_grid_from_rectilinear.py  create_cornerpoint_grid_from_regular.py  create_cornerpoint_grid_from_zones.py  horizon_modeling.py  pillar_griding.py  zone_modeling.py
examples/property_modeling/: apply.py  array.py  constant_full_grid.py  constant_per_zone.py  from_wells.py  lognormal_distribution.py  normal_distribution.py  uniform.py
llm/: conf.py
llm/scripts/: update_type_hints_docstrings.py
llm/src/: agent.py  toolkit.py
scripts/: discover_min_deps.py
src/petres/: __init__.py  _compat.py  _validation.py  errors.py
src/petres/_utils/: _color.py  _dataframe.py  _grid.py
src/petres/eclipse/: __init__.py  aquifers.py  units.py
src/petres/errors/: __init__.py  (+8 more)
src/petromod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py
tests/api/: README.md  __init__.py  test_boundary_polygon.py  test_complete_workflows.py  test_grid_creation.py  test_grid_import_export.py  test_grid_visualization.py  test_horizon_zone_modeling.py  test_property_modeling.py  test_tutorial_examples.py
tests/eclipse/: test_grdecl_io.py  test_validation.py
tests/fixtures/: grid_factory.py
tests/grids/: test_cornerpoint_grid.py  test_pillar_grid.py
tests/horizons/: test_horizon.py  test_horizon_workflows.py
tests/integration/: test_models_workflows.py  test_workflows.py
tests/interpolators/: test_idw_interpolator.py  test_idw_parameters.py  test_interpolator_aliases.py  test_kriging_interpolators.py  test_rbf_interpolator.py
tests/properties/: test_grid_properties.py  test_property_sources.py
tests/regression/: test_regressions.py  test_zone_and_property_regressions.py
tests/viewers/: test_matplotlib2d_viewer_core.py  test_viewers_optional.py
tests/views/: test_view_workflows.py
tests/zones/: test_zone.py  test_zone_levels.py
(+86 files in other folders)
