[project]
name = "petres"
version = "0.1.0"
description = "Add your description here"

license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "scipy>=1.17.0",
]

[dependency-groups]
docs = [
    "furo>=2025.12.19",
    "sphinx>=9.1.0",
    "sphinx-autoapi>=3.6.1",
    "sphinx-autodoc-typehints>=3.6.2",
    "sphinx-design>=0.7.0",
    "sphinx-rtd-theme>=3.1.0",
]
