[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Tayfun Jamalbayli" }
]
keywords = [
    "corner-point-grid", 
    "eclipse", 
    "geomodeling", 
    "grid-generation", 
    "petres", 
    "petroleum-engineering", 
    "python", 
    "reservoir-modeling", 
    "reservoir-simulation", 
    "structured-grids", 
    "subsurface-modeling"
]



classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "matplotlib>=3.10.8",
    "pyvista>=0.47.0",
    "shapely>=2.1.2",
    "pykrige>=1.7.3",
]



[project.urls]
Documentation = "https://petres.readthedocs.io/"
Repository = "https://github.com/jamalbaylit/petres"
Issues = "https://github.com/jamalbaylit/petres/issues"




[dependency-groups]
docs = [
    "furo>=2025.12.19",
    "shibuya>=2026.1.9",
    "sphinx>=9.1.0; python_version >= '3.12' and python_version < '3.13'",
    "sphinx-autoapi>=3.6.1",
    "sphinx-autodoc-typehints>=3.6.2; python_version >= '3.12'",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-rtd-theme>=3.1.0",
]

test = [
    "pytest>=8.3.0",
]

examples = [
    "pandas>=3.0.1",
]

llm = [
    "aiohttp>=3.9.9",
    "pygithub>=2.9.0",
    "python-decouple>=3.8",
    "tqdm>=4.67.3",
]





[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast, module-level tests",
    "integration: multi-module workflow tests",
    "regression: tests for previously fixed/known edge cases",
    "viewer: tests related to 2D/3D viewers and optional visualization dependencies",
]
