[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petres"
version = "0.1.0rc4"
description = "Petres: lightweight Python library for reservoir grid modeling and visualization"
readme = { file = "README.md", content-type = "text/markdown" }

requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Tayfun Jamalbayli", email = "jamalbaylit@gmail.com"  }
]
keywords = [
    "corner-point-grid",
    "reservoir-modeling",
    "reservoir-engineering",
    "eclipse",
    "reservoir-simulation",
    "grid-modeling",
    "visualization",
]



classifiers = [
    # Project maturity
    "Development Status :: 3 - Alpha",

    # Audience
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",

    # License
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",

    # Python versions you officially support/test
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    # OS support
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",

    # Topics
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
]


dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pyvista>=0.43.0",
    "shapely>=2.0.0",
    "pykrige>=1.7.0",
]



[project.urls]
Homepage = "https://petres.readthedocs.io/"
Documentation = "https://petres.readthedocs.io/"
Source = "https://github.com/jamalbaylit/petres"
Issues = "https://github.com/jamalbaylit/petres/issues"




[dependency-groups]
docs = [
    "furo>=2025.12.19",
    "shibuya>=2026.1.9",
    "sphinx>=9.1.0; python_version >= '3.12' and python_version < '3.13'",
    "sphinx-autoapi>=3.6.1",
    "sphinx-autodoc-typehints>=3.6.2; python_version >= '3.12'",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-inline-svg>=0.2.0",
    "sphinx-rtd-theme>=3.1.0",
]

test = [
    "pytest>=8.3.0",
]

examples = [
    "pandas>=3.0.1",
]

llm = [
    "aiohttp>=3.9.9",
    "pygithub>=2.9.0",
    "python-decouple>=3.8",
    "tqdm>=4.67.3",
]





[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast, module-level tests",
    "integration: multi-module workflow tests",
    "regression: tests for previously fixed/known edge cases",
    "viewer: tests related to 2D/3D viewers and optional visualization dependencies",
]
